feat: modify post, comments and add telescope debugging
